# test_scrape_proj

./: .gitignore  README.md  manage.py  pyproject.toml
currencies/: models.py  tasks.py
marketplaces/: models.py  sync.py  tasks.py
marketplaces/migrations/: 0001_initial.py  0002_product_category.py  0003_remove_productoffer_url.py
marketplaces/services/: base.py  dummyjson.py  fakestoreapi.py
notifications/: models.py  serializers.py  tasks.py  urls.py  views.py
products/: serializers.py  urls.py  views.py
test_scrape_proj/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tracking/: models.py  serializer.py  urls.py  views.py
users/: urls.py  views.py
